# cw2p-com.ishpdnya.tts

./: .gitignore  README.md  announcer.py  config.py  cwplugin.json  main.py  pyproject.toml  speaker.py
docs/: README.md
engines/: __init__.py  base.py  edge.py  pyttsx3_engine.py  winsdk_engine.py
qml/: settings.qml
